# discord.http

./: .buildinfo  .gitignore  CNAME  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: FUNDING.yml
.github/workflows/: deploy_docs.yml  pyright.yml  pyright_pr.yml  type_lint.yml
_modules/: index.html
_modules/discord_http/: asset.html  audit.html  automod.html  backend.html  channel.html  client.html  colour.html  commands.html  context.html  cooldowns.html  embeds.html  emoji.html  entitlements.html  enums.html  errors.html  file.html  flag.html  flags.html  guild.html  http.html  integrations.html  invite.html  member.html  mentions.html  message.html  multipart.html  object.html  response.html  role.html  soundboard.html  sticker.html  tasks.html  user.html  view.html  voice.html  webhook.html
_modules/discord_http/gateway/: activity.html  client.html  enums.html  flags.html  object.html
_sources/: index.rst.txt
_sources/api/: automod.rst.txt  integrations.rst.txt  voice.rst.txt
_sources/gateway/: client.rst.txt
_sources/pages/: api.rst.txt  events.rst.txt  format.rst.txt  getting_started.rst.txt
api/: asset.html  audit.html  automod.html  backend.html  channel.html  client.html  colour.html  commands.html  context.html  cooldowns.html  embeds.html  emoji.html  entitlements.html  enums.html  errors.html  file.html  flag.html  flags.html  guild.html  http.html  integrations.html  invite.html  member.html  mentions.html  message.html  multipart.html  object.html  response.html  role.html  soundboard.html  sticker.html  tasks.html  user.html  view.html  voice.html  webhook.html
discord_http/: __init__.py  __main__.py  asset.py  audit.py  automod.py  backend.py  channel.py  client.py  colour.py  commands.py  context.py  cooldowns.py  embeds.py  emoji.py  entitlements.py  enums.py  errors.py  file.py  flags.py  guild.py  http.py  integrations.py  invite.py  member.py  mentions.py  message.py  multipart.py  object.py  response.py  role.py  soundboard.py  sticker.py  tasks.py  user.py  utils.py  view.py  voice.py  webhook.py
discord_http/gateway/: README.md  __init__.py  activity.py  cache.py  client.py  enums.py  flags.py  intents.py  object.py  parser.py  shard.py  todo_intents.md  websocket.py
discord_http/types/: __init__.py  application.py  audit_logs.py  automoderation.py  channels.py  commands.py  components.py  emojis.py  guilds.py  interaction.py  snowflake.py
discord_http/voice/: __init__.py  client.py  connection.py  dave.py  encryptor.py  enums.py  gateway_udp.py  oggparse.py  opus.py  player.py  receiver.py  sinks.py  socket.py
docs/: Makefile  conf.py  index.rst
docs/api/: audit.rst  flags.rst  soundboard.rst
docs/extensions/: google_analytics.py  seo_support.py
docs/gateway/: activity.rst  enums.rst  flags.rst  object.rst
docs/pages/: api.rst  backend.rst  discord.rst  events.rst  format.rst  gateway.rst  getting_started.rst  github.rst
examples/: autocomplete_example.py  backend_example.py  button_example.py  call_after_example.py  choices_example.py  cog_example.py  components_v2_example.py  context_menu_example.py  gateway_example.py  logging_example.py  loop_example.py  modal_example.py  offline_example.py  ping_cmd_example.py  prompt_example.py  regex_example.py  select_example.py  user_command_example.py  voice_example.py
examples/cogs/: ping.py
gateway/: activity.html  client.html  enums.html  flags.html  object.html
pages/: api.html  backend.html  contribute.html  discord.html  events.html  format.html  gateway.html  getting_started.html  github.html  license.html
tests/: components_v2.py  manual_testing.py  shard_testing.py  test_colour.py  test_cooldowns.py  test_enums.py  test_errors.py  test_file_module.py  test_flags.py  test_mentions.py  test_snowflake.py  test_utils.py  test_voice_encryptor.py  test_voice_oggparse.py  url_testing.py
tests/manual/: components_v2.py  config.json.example  websocket.py
